[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.15",
    "einops>=0.8.1",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "jax>=0.6.2",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.3",
    "matplotlib-backend-sixel>=0.1.0",
    "pynvim>=0.5.2",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "treescope>=0.1.9",
]
